# libcemuextend

./: .gitignore  CMakeLists.txt  README.md  libcemuextend.mk
include/cemuextend/: bootstrap.hpp  cemuextend.hpp  guest.hpp  services.hpp  transport.hpp  wire.hpp
src/: cemod_stubs.cpp  guest.cpp  guest2.cpp
tests/: guest2_tests.cpp  guest_tests.cpp  wire_tests.cpp
